# fin-ratios

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  mkdocs.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_ratio.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  jsr-publish.yml  release.yml
conda-recipe/: meta.yaml
docs/: CITATIONS.md  MOAT_SCORE.md  byod.md  changelog.md  cli.md  index.md  installation.md  quickstart.md  typescript.md
docs/fetchers/: alphavantage.md  edgar.md  fmp.md  polygon.md  simfin.md  yahoo.md
docs/integrations/: dataframes.md  fastapi.md  jupyter.md  mcp.md  react.md
docs/ratios/: cashflow.md  composite.md  efficiency.md  growth.md  liquidity.md  profitability.md  risk.md  sector.md  solvency.md  valuation.md
docs/scoring/: capital-allocation.md  dividend-safety.md  earnings-quality.md  index.md  investment.md  management.md  moat.md  quality-factor.md  valuation.md
docs/utils/: backtest.md  benchmarks.md  compute-all.md  fair-value.md  peers.md  portfolio.md  scenario-dcf.md  trends.md
examples/: 02_scoring_walkthrough.py
python/: pyproject.toml
python/examples/: 01_valuation_examples.py  03_composite_scores.py  04_risk_portfolio.py  05_saas_metrics.py
python/fin_ratios/: __init__.py  _utils.py  api.py  cache.py  cli.py  mcp_server.py  notebook.py  pandas_ext.py
python/fin_ratios/fetchers/: __init__.py  alphavantage.py  edgar.py  fmp.py  polygon.py  simfin.py  yahoo.py
python/fin_ratios/ratios/: __init__.py  cashflow.py  composite.py  efficiency.py  growth.py  liquidity.py  profitability.py  risk.py  solvency.py  valuation.py  valuation_dcf.py
python/fin_ratios/ratios/sector/: __init__.py  banking.py  insurance.py  reit.py  saas.py
python/fin_ratios/types/: __init__.py  financials.py  market.py
python/fin_ratios/utils/: __init__.py  backtest.py  benchmarks.py  capital_allocation.py  compute_all.py  dividend_score.py  earnings_quality.py  fair_value.py  health_score.py  investment_score.py  management_score.py  moat_score.py  peers.py  portfolio.py  quality_score.py  scenario_dcf.py  screening.py  trends.py  valuation_score.py
python/scripts/: sp500_analysis.py
python/tests/: test_backtest.py  test_capital_allocation.py  test_composite.py  test_dividend_score.py  test_earnings_quality.py  test_fair_value.py  test_investment_score.py  test_liquidity_solvency.py  test_management_score.py  test_moat_score.py  test_pandas_ext.py  test_profitability.py  test_quality_score.py  test_risk.py  test_saas.py  test_utils.py  test_v2.py  test_valuation.py  test_valuation_score.py
typescript/: .npmignore  jsr.json  package-lock.json  package.json  tsconfig.json  tsup.config.ts
typescript/examples/: 02_composite_scores.ts
typescript/src/: index.ts
typescript/src/__tests__/: capital-allocation.test.ts  dividend-score.test.ts  earnings-quality.test.ts  edgar-normalize.test.ts  fair-value.test.ts  investment-score.test.ts  management-score.test.ts  moat-score.test.ts  quality-score.test.ts  ratios.test.ts  valuation-score.test.ts
typescript/src/fetchers/alphavantage/: index.ts
typescript/src/fetchers/edgar/: index.ts
typescript/src/fetchers/fmp/: index.ts
typescript/src/fetchers/polygon/: index.ts
typescript/src/fetchers/yahoo/: index.ts
typescript/src/hooks/: index.ts
typescript/src/ratios/cashflow/: index.ts
typescript/src/ratios/composite/: index.ts
typescript/src/ratios/efficiency/: index.ts
typescript/src/ratios/growth/: index.ts
typescript/src/ratios/liquidity/: index.ts
typescript/src/ratios/profitability/: index.ts
typescript/src/ratios/risk/: index.ts
typescript/src/ratios/sector/banking/: index.ts
typescript/src/ratios/sector/insurance/: index.ts
typescript/src/ratios/sector/reit/: index.ts
typescript/src/ratios/sector/saas/: index.ts
typescript/src/ratios/solvency/: index.ts
typescript/src/ratios/valuation/: dcf.ts  index.ts
typescript/src/types/: financials.ts  index.ts  market.ts
typescript/src/utils/: cache.ts  capital-allocation.ts  compute-all.ts  dividend-score.ts  earnings-quality.ts  fair-value.ts  investment-score.ts  management-score.ts  math.ts  moat-score.ts  portfolio.ts  quality-score.ts  safe-divide.ts  scenario-dcf.ts  valuation-score.ts
